ci cd file changed python version

--- a/.github/workflows/django_ci_cd.yaml
+++ b/.github/workflows/django_ci_cd.yaml
@@ -49,12 +49,12 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build --file Dockerfile --tag my-django-app:latest .
+        docker build --file Dockerfile --tag ars-django-app:latest .
 
     - name: Push Docker image
       run: |
-        docker tag ars-django-app:latest ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
+        docker tag ars-django-app:latest ${{ secrets.DOCKER_USERNAME }}/ars-django-app:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/ars-django-app:latest
 
   # deploy:
   #   runs-on: ubuntu-latest
@@ -62,4 +62,4 @@ jobs:
   #   steps:
   #   - name: Deploy to Server
   #     run: |
-  #       ssh user@yourserver "docker pull ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest && docker-compose up -d"
+  #       ssh user@yourserver "docker pull ${{ secrets.DOCKER_USERNAME }}/ars-django-app:latest && docker-compose up -d"
